[gd_scene load_steps=13 format=3 uid="uid://bapsuxnfytj8r"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_7c8jw"]
[ext_resource type="PackedScene" uid="uid://dl1i1ytfm3yq8" path="res://scenes/levels/echelon/echelon_background/echelon_background.tscn" id="2_1dwu8"]
[ext_resource type="PackedScene" uid="uid://ccjd8iuh12v15" path="res://scenes/game_start/game_start.tscn" id="3_760wl"]
[ext_resource type="PackedScene" uid="uid://bey7edubynppe" path="res://scenes/tilemaps/echelon_tilemap.tscn" id="3_kirce"]
[ext_resource type="Script" path="res://scenes/levels/echelon/echelon_level_6_events.gd" id="3_wjbuw"]
[ext_resource type="TileSet" uid="uid://bj7nf381gptk8" path="res://scenes/tilemaps/echelon_tile_set_1.tres" id="4_bubg8"]
[ext_resource type="TileSet" uid="uid://bstngg7fa12di" path="res://scenes/tilemaps/echelon_tile_set_2.tres" id="5_4oyas"]
[ext_resource type="PackedScene" uid="uid://v8ktvgppf1kf" path="res://scenes/game_camera/game_camera.tscn" id="5_541d7"]
[ext_resource type="PackedScene" uid="uid://bxorvbg3vlxdk" path="res://scenes/level_transitions/level_transition_area.tscn" id="6_5eepe"]
[ext_resource type="PackedScene" uid="uid://cp1sgx6p5qtyh" path="res://scenes/tilemaps/echelon_decoration_tiles.tscn" id="6_i1yme"]
[ext_resource type="PackedScene" uid="uid://lm4n2658jmcd" path="res://scenes/entities/echelon_door/echelon_door.tscn" id="6_r6cxr"]
[ext_resource type="Script" path="res://scenes/entities/echelon_door/boss_door.gd" id="7_stfy0"]

[node name="EchelonLevel6" type="Node2D" node_paths=PackedStringArray("game_start")]
y_sort_enabled = true
script = ExtResource("1_7c8jw")
map_pin_cell = Vector2i(14, 7)
game_start = NodePath("GameStart")

[node name="EchelonBackground" parent="." instance=ExtResource("2_1dwu8")]

[node name="EchelonTileMap1" parent="." instance=ExtResource("3_kirce")]
z_index = -1
tile_set = ExtResource("4_bubg8")

[node name="EchelonTileMap2" parent="." instance=ExtResource("3_kirce")]
z_index = -1
tile_set = ExtResource("5_4oyas")

[node name="EchelonDecorationTiles" parent="." instance=ExtResource("6_i1yme")]
z_index = -1

[node name="GameStart" parent="." instance=ExtResource("3_760wl")]
position = Vector2(-20, 8)

[node name="GameCamera" parent="." instance=ExtResource("5_541d7")]
position = Vector2(-32, 8)
custom_limit_right = 32
custom_limit_top = -24

[node name="Events" type="Node" parent="."]
script = ExtResource("3_wjbuw")

[node name="PhiloTimer" type="Timer" parent="Events"]
wait_time = 8.0

[node name="RasterTimer" type="Timer" parent="Events"]
wait_time = 16.0

[node name="SpawnPointsParent" type="Node" parent="Events"]

[node name="SpawnPoint1" type="Node2D" parent="Events/SpawnPointsParent"]
position = Vector2(-352, 112)

[node name="SpawnPoint2" type="Node2D" parent="Events/SpawnPointsParent"]
position = Vector2(-320, 176)

[node name="SpawnPoint3" type="Node2D" parent="Events/SpawnPointsParent"]
position = Vector2(-256, 208)

[node name="SpawnPoint4" type="Node2D" parent="Events/SpawnPointsParent"]
position = Vector2(-176, 208)

[node name="SpawnPoint5" type="Node2D" parent="Events/SpawnPointsParent"]
position = Vector2(-176, 168)

[node name="SpawnPoint6" type="Node2D" parent="Events/SpawnPointsParent"]
position = Vector2(-304, 112)

[node name="SpawnPoint7" type="Node2D" parent="Events/SpawnPointsParent"]
position = Vector2(-256, 152)

[node name="SpawnPoint8" type="Node2D" parent="Events/SpawnPointsParent"]
position = Vector2(-304, 64)

[node name="ChestSpawn" type="Node2D" parent="Events"]
position = Vector2(-240, 123)

[node name="Entities" type="Node2D" parent="." groups=["entities"]]
y_sort_enabled = true

[node name="BossDoor" parent="Entities" node_paths=PackedStringArray("trap_area") instance=ExtResource("6_r6cxr")]
unique_name_in_owner = true
position = Vector2(-100, 58)
scale = Vector2(-1, 1)
script = ExtResource("7_stfy0")
door_id = "echelon6_door0"
trap_area = NodePath("Area2D")

[node name="Area2D" type="Area2D" parent="Entities/BossDoor"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Entities/BossDoor/Area2D"]
visible = false
position = Vector2(-4, -2)
polygon = PackedVector2Array(140, -42, 124, 38, 60, 70, -52, 62, -52, 94, 76, 102, 156, 62, 172, -26)

[node name="Foreground" type="Node2D" parent="." groups=["foreground"]]
z_index = 1

[node name="LevelTransitionArea" parent="." instance=ExtResource("6_5eepe")]
path = "res://scenes/levels/echelon/echelon_level_2.tscn"
new_player_position = Vector2(-240, 216)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LevelTransitionArea"]
position = Vector2(16, -8)
polygon = PackedVector2Array(-32, -8, 16, 16, 64, -8, 16, -32)
